<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/img1">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:textColorHint="#373333"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/parola"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_password"
            android:hint="@string/confirma_parola"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_register"
        android:text="@string/inregistrare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/loginNow"
        android:text="@string/autentificare"
        android:textColor="#373333"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>
